[package]
name = "marytts-rs"
version = "0.1.0"
authors = ["tinaxd <31384595+tinaxd@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"

[dependencies.reqwest]
version = "0.10.0-alpha.2"
features = ["blocking"]
